--- a/client/src/Components/Challenges/Challenges.css
+++ b/client/src/Components/Challenges/Challenges.css
@@ -15,3 +15,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+.challenge-of-the-day {
+    display: flex;
+    justify-content: center;
+}
