almost done with all of functionality and styling

--- a/client/src/Components/Challenges/ChallengeCard.css
+++ b/client/src/Components/Challenges/ChallengeCard.css
@@ -2,7 +2,14 @@
     margin: 2%;
     width: 25%;
     height:max-content;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.last-card-container {
+    margin: 2%;
+    width: 25%;
+    height:max-content;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .card-header {
@@ -26,6 +33,12 @@
     width: 100%;
     height: 50%;
     object-fit: contain;
-    filter: grayscale(65%);
+    filter: grayscale(90%);
     /* border-style: solid; */
+}
+
+.last-card-container img {
+    width: 100%;
+    height: 50%;
+    object-fit: contain;
 }
