--- a/client/src/Components/MyPage/PostCardList.css
+++ b/client/src/Components/MyPage/PostCardList.css
@@ -3,9 +3,9 @@
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
     font-family: 'Bungee', cursive;
     width: max-content;
-    /* padding-left: 2%; */
 }
 
 #my-posts {
-    padding-left: 2%;
+    margin-left: auto;
+    margin-right: auto;
 }
