--- a/client/src/Components/Feed/Feed.css
+++ b/client/src/Components/Feed/Feed.css
@@ -8,3 +8,12 @@
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
     font-family: 'Bungee', cursive;
 }
+
+.feed-posts {
+    background: rgba(255, 255, 255, 0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 50%;
+    margin: auto;
+}
