--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -13,24 +13,28 @@
 }
 
 #announcement-list {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.3);
     /* max-width: 64.5em; */
     max-width: 49%;
 }
 
 .announcement p {
-    font-size: 1.75em;
+    font-size: 1.5em;
     line-height: 1.75em;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    font-family: 'Bungee', cursive;
+
 }
 
 #about-us p {
-    font-size: 1.75em;
-    background: rgba(255, 255, 255, 0.2);
+    font-size: 1.55em;
+    background: rgba(255, 255, 255, 0.3);
     max-width: 49.5%;
     text-indent: 2em;
     line-height: 1.75em;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    font-family: 'Bungee', cursive;
+
 }
