--- a/client/src/Components/MyPage/PostCard.css
+++ b/client/src/Components/MyPage/PostCard.css
@@ -1,12 +1,28 @@
 .post-card {
-    margin: 2%;
-    width: 40%;
+    width: 50%;
     height:max-content;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.3);
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.post-card h1 {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
 }
 
 .post-card img {
-    width: 100%;
+    width: 90%;
     height: 50%;
+    margin: auto;
+    margin-top: 1em;
+    padding-bottom: 1em;
     object-fit: contain;
 }
