--- a/client/src/Components/PicItUp101/PicItUp101.css
+++ b/client/src/Components/PicItUp101/PicItUp101.css
@@ -17,13 +17,14 @@
 }
 
 #rules-list {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.3);
     max-width: 49%;
 }
 
 .rule p {
-    font-size: 1.25em;
-    line-height: 1.75em;
+    font-size: 1.5em;
+    line-height: 1.25em;
+    font-family: 'Bungee', cursive;
     padding-left: 0.5em;
     padding-right: 0.5em;
 }
@@ -36,13 +37,14 @@
 }
 
 #warnings-list {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.3);
     max-width: 49%;
 }
 
 .warning p {
-    font-size: 1.25em;
-    line-height: 1.75em;
+    font-size: 1.5em;
+    line-height: 1.25em;
+    font-family: 'Bungee', cursive;
     padding-left: 0.5em;
     padding-right: 0.5em;
 }
@@ -55,13 +57,14 @@
 }
 
 #advice-list {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.3);
     max-width: 49%;
 }
 
 .advice p {
-    font-size: 1.25em;
-    line-height: 1.75em;
+    font-size: 1.5em;
+    line-height: 1.25em;
+    font-family: 'Bungee', cursive;
     padding-left: 0.5em;
     padding-right: 0.5em;
 }
