--- a/client/src/Components/Challenges/ChallengeCard.css
+++ b/client/src/Components/Challenges/ChallengeCard.css
@@ -1,44 +1,49 @@
 .card-container {
-    margin: 2%;
-    width: 25%;
-    height:max-content;
+    width: 25vw;
+    min-height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: inherit;
     background-color: rgba(255, 255, 255, 0.3);
-}
-
-.last-card-container {
-    margin: 2%;
-    width: 25%;
-    height:max-content;
-    background-color: rgba(255, 255, 255, 0.3);
+    margin-bottom: 5vh;
 }
 
 .card-header {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    min-height: 10em;
-}
-
-.card-header h1 {
+    flex-direction: column;
+    text-align: center;
+    /* min-height: fit-content; */
     color: rgb(0, 0, 0);
-    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
     font-family: 'Bungee', cursive;
 }
 
-.challenge-location {
-    inline-size: 50%;
+.card-container img {
+    width: 20vw;
+    max-height: 50vh;
+    object-fit: contain;
+    margin-left: auto;
+    margin-right: auto;
+    filter: grayscale(90%);
 }
 
-.card-container img {
-    width: 100%;
-    height: 50%;
-    object-fit: contain;
-    filter: grayscale(90%);
-    /* border-style: solid; */
+.hint {
+    text-align: center;
+}
+
+.last-card-container {
+    width: 25vw;
+    min-height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: inherit;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin-bottom: 5vh;
 }
 
 .last-card-container img {
-    width: 100%;
-    height: 50%;
+    width: 20vw;
+    max-height: 50vh;
     object-fit: contain;
+    margin-left: auto;
+    margin-right: auto;
 }
