--- a/client/src/Components/MyPage/PostCard.css
+++ b/client/src/Components/MyPage/PostCard.css
@@ -1,28 +1,26 @@
 .post-card {
-    width: 50%;
-    height:max-content;
-    background-color: rgba(255, 255, 255, 0.3);
+    width: 25vw;
+    min-height: fit-content;
     display: flex;
     flex-direction: column;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    justify-content: space-evenly;
+    background-color: rgba(255, 255, 255, 0.3);
+    margin-bottom: 5vh;
 }
 
 .post-card h1 {
     display: flex;
     flex-direction: column;
+    /* min-height: fit-content; */
+    color: rgb(0, 0, 0);
+    font-family: 'Bungee', cursive;
+}
+ 
+.post-card img {
+    width: 20vw;
+    height: 50vh;
+    object-fit: contain;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0.25em;
-    margin-bottom: 0.25em;
-}
-
-.post-card img {
-    width: 90%;
-    height: 50%;
-    margin: auto;
-    margin-top: 1em;
-    padding-bottom: 1em;
-    object-fit: contain;
+    margin-bottom: 5vh;
 }
