--- a/client/src/Components/MyPage/PostCardList.css
+++ b/client/src/Components/MyPage/PostCardList.css
@@ -1,11 +1,10 @@
 .post-card-list h1{
     color: rgb(0, 0, 0);
-    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
     font-family: 'Bungee', cursive;
-    width: max-content;
 }
 
-#my-posts {
-    margin-left: auto;
-    margin-right: auto;
+.post-cards-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
